--- a/Grades1/Grades1.csproj
+++ b/Grades1/Grades1.csproj
@@ -45,11 +45,20 @@
   <ItemGroup>
     <Compile Include="GradeBook.cs" />
     <Compile Include="GradeStatistics.cs" />
+    <Compile Include="GradeTracker.cs" />
+    <Compile Include="NameChangedEventArgs.cs" />
+    <Compile Include="NamedChangedDeligate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThrowAwayGradeBook.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="grades.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
